--- a/src/index.css
+++ b/src/index.css
@@ -86,3 +86,14 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+.datepicker_style {
+  border-radius: 8px !important;
+  border: 1px solid #e5e5e5 !important;
+  overflow: hidden !important;
+  font-size: 14px !important;
+  margin-top: "4px" !important;
+  background-color: white !important;
+  padding: 6px;
+}
