--- a/src/pages/privateRouting/Employee/style.css
+++ b/src/pages/privateRouting/Employee/style.css
@@ -18,16 +18,6 @@
   height: 44px;
 }
 
-.datepicker_style {
-  border-radius: 8px !important;
-  border: 1px solid #e5e5e5 !important;
-  overflow: hidden !important;
-  font-size: 14px !important;
-  margin-top: "4px" !important;
-  background-color: white !important;
-  padding: 4px;
-}
-
 .fui-PopupSurface {
   background-color: #fff !important;
   border: 1px solid #ddd !important;
@@ -43,4 +33,38 @@
 .form-actions {
   display: flex;
   justify-content: center;
+}
+
+.employee-modal {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2px;
+  background-color: var(--primary-color);
+  margin-top: -56px;
+  margin-left: -24px;
+  width: 596px;
+}
+
+.employee-modal-text {
+  margin-left: 10px;
+  color: #fff;
+}
+
+.dropdown-options {
+  padding: 6px;
+  border: 1px solid #e5e5e5;
+  background-color: #fff;
+}
+
+.save-btn {
+  padding: 8px 30px;
+  border-radius: 50px;
+  background-color: var(--primary-color);
+  color: white;
+}
+
+.save-btn:hover {
+  background-color: var(--primary-color);
+  color: white;
 }
