--- a/src/pages/privateRouting/Candidate/style.css
+++ b/src/pages/privateRouting/Candidate/style.css
@@ -7,7 +7,7 @@
 
 .form-title {
   text-align: center;
-  background-color: #6b21a8; /* purple-700 */
+  background-color: var(--primary-color); 
   color: white;
   padding: 12px;
   border-top-left-radius: 12px;
@@ -38,12 +38,10 @@
   height: 36px;
 }
 
-/* Hide the ugly default input */
 .resume-input-hidden {
   display: none;
 }
 
-/* Styled file upload button (looks like input) */
 .resume-label {
   display: flex;
   justify-content: space-between;
@@ -67,7 +65,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
-  color: #4b5563; /* gray-600 */
+  color: #4b5563;
   font-size: 14px;
 }
 
